# RefCountingObject-AngelScript

./: .gitignore  Example.as  Example.cpp  HorseHandle.cpp  HorseHandle.h  LICENSE.txt  README.md  RefCountingObject.h  RefCountingObjectHandle.cpp  RefCountingObjectHandle.h  RefCountingObjectPtr.h
Testbed/: CMakeLists.txt  Testbed.sln  Testbed.vcxproj  Testbed.vcxproj.filters  conanfile.txt  debug_log.h  dog.h  horse.h  main.cpp  test.as
